Ajustes de pormenor.

--- a/anotacao.org
+++ b/anotacao.org
@@ -120,11 +120,11 @@ O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fi
 *3. Âmbito de aplicação material*. A ratreabilidade dos comerciantes tem por objeto a utilização das plataformas em linha para "promover mensagens e oferecer produtos ou serviços". A promoção de mensagens pelo comerciante parece reconduzível ao conceito de "anúncio publicitário" definido no artigo 3.º, al. /r)/. As noções de "produtos" e "serviços" parecem ser, respetivamente, as definidas no art. 2.º, n.º 5, da Diretiva relativa a certos aspetos dos contratos de compra e venda de bens[fn:20] e no art. 4.º, n.º 1, da Diretiva serviços[fn:21]. O artigo, ao mencionar a promoção de mensagens e a oferta de produtos e serviços, /não/ abrange a conclusão do contrato[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 12;@muller-terpitz2023, art. 30.º, n.º 6].
 
 *** IV - Recolha de informações (n.º 1)
-*4. Obrigação de recolha e ónus de prestação de informação*. Resulta do n.º 1 que os fornecedores das plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes têm a obrigação de não permitir a utilização da sua plataforma pelo comerciante para promover mensagens ou oferecer produtos e serviços aos consumidores localizados na União Europeia /antes/ de recolhida a informação elecanda neste número.
+*4. Introdução*. Resulta do n.º 1 que os fornecedores das plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes têm a obrigação de não permitir a utilização da sua plataforma pelo comerciante para promover mensagens ou oferecer produtos e serviços aos consumidores localizados na União Europeia /antes/ de recolhida a informação elecanda neste número.
 
 Do n.º 1 não parece resultar um dever, mas sim ónus do comerciante prestar a informação. Dito de outra forma, o comerciante não se encontra obrigado pelo artigo 30.º a prestar a informação ao fornecedor da plataforma em linha, mas se não o fizer não poderá utilizar a plataforma para promover mensagens ou oferecer produtos ou serviços aos consumidores localizados na União Europeia[cite:@hofmann2023, art. 30.º, n.º 12]. O artigo não impede que o fornecedor permita que o comerciante: /(i)/ utilize a plataforma em linha em momento anterior ao da prestação da informação para realizar atos diferentes da promoção de mensagens ou oferta de produtos ou serviços, como, por exemplo, a organização da sua "loja virtual" na plataforma em linha[cite:@hofmann2023, art. 30.º, n.º 11]; /(ii)/ dirija a sua atividade para os consumidores localizados fora da União Europeia (cf. /supra/ *III.2.*).
 
-*a) Nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante*. Esta informação já é exigida no artigo 6.º da Diretiva relativa aos direitos dos consumidores[fn:22] e visa facilitar a identificação e contacto com o comerciante e promover um ambiente em linha mais seguro, em primeira linha para os consumidores. Neste contexto, o comerciante (seja ele pessoa singular ou coletiva) deve indicar o seu nome completo. O endereço postal deve corresponder à morada onde o comerciante pode ser judicialmente demandado (podendo, consoante os casos, ser uma das que resulta da aplicação dos artigos 4.º, 7.º, n.º 5, ou 17.º, n.º 2, conjugados com o artigo 63.º, todos do Regulamento Bruxelas I /bis/[fn:23]). A indicação de um número telefone é obrigatória, divergindo do que decidiu o TJUE no contexto da Diretiva relativa aos direitos dos consumidores[fn:24]. Por fim, o endereço de correio eletrónico indicado deve permitir o efetivo contacto com o comerciante e não pode ser um endereço configurado com respostas automáticas que remetam para outros meios de contacto[cite:@hofmann2023, art. 30.º, n.º 19].
+*5. Informações a obter*. *a) Nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante*. Esta informação já é exigida no artigo 6.º da Diretiva relativa aos direitos dos consumidores[fn:22] e visa facilitar a identificação e contacto com o comerciante e promover um ambiente em linha mais seguro, em primeira linha para os consumidores. Neste contexto, o comerciante (seja ele pessoa singular ou coletiva) deve indicar o seu nome completo. O endereço postal deve corresponder à morada onde o comerciante pode ser judicialmente demandado (podendo, consoante os casos, ser uma das que resulta da aplicação dos artigos 4.º, 7.º, n.º 5, ou 17.º, n.º 2, conjugados com o artigo 63.º, todos do Regulamento Bruxelas I /bis/[fn:23]). A indicação de um número telefone é obrigatória, divergindo do que decidiu o TJUE no contexto da Diretiva relativa aos direitos dos consumidores[fn:24]. Por fim, o endereço de correio eletrónico indicado deve permitir o efetivo contacto com o comerciante e não pode ser um endereço configurado com respostas automáticas que remetam para outros meios de contacto[cite:@hofmann2023, art. 30.º, n.º 19].
 
 *b) Cópia do documento de identificação do comerciante ou qualquer outra identificação eletrónica*. O fornecedor deve receber cópia do documento de identificação do comerciante. No caso de comerciantes com cartão do cidadão português, a cópia pode ser substituída pelo documento pdf gerado pela aplicação móvel gov.pt, ao abrigo do Regulamento eIDAS[fn:25].
 
@@ -138,26 +138,26 @@ Do n.º 1 não parece resultar um dever, mas sim ónus do comerciante prestar a 
 A recolha de informação prevista no n.º 1 deste artigo parte do pressuposto de que o comerciante ainda não utiliza a plataforma em linha do fornecedor. Se o comerciante, à data da entrada em aplicação das normas do RSD, já utilizava a plataforma em linha, o fornecedor deve solicitar-lhe a prestação das informações elencadas no n.º 1. Se os comerciantes em causa não fornecerem as informações até 17 de fevereiro de 2025, os fornecedores suspendem o fornecimento dos seus serviços a tais comerciantes até que estes tenham fornecido todas as informações.
 
 *** VI - Obrigação de avaliação prévia da informação obtida (n.º 2, 1.º parágrafo)
-*5. Regime*. Recebidas as informações elencadas no n.º 1, o fornecedor deve envidar todos os esforços para avaliar se as informações recebidas são fiáveis e completas antes de permitir a utilização da sua plataforma pelo comerciante para propor mensagens e oferecer produtos ou serviços aos consumidores localizados na União Europeia. Esta obrigação de avaliação prévia da informação obtida é uma novidade.
+*6. Regime*. Recebidas as informações elencadas no n.º 1, o fornecedor deve envidar todos os esforços para avaliar se as informações recebidas são fiáveis e completas antes de permitir a utilização da sua plataforma pelo comerciante para propor mensagens e oferecer produtos ou serviços aos consumidores localizados na União Europeia. Esta obrigação de avaliação prévia da informação obtida é uma novidade.
 
-*6. Objeto da avaliação*. O fornecedor deve avaliar se as informações são fiáveis e completas. Verificar se as informações estão ou não completas não parece suscitar dificuldades de maior[cite:@wilman2024, art. 30.º, n.º 15]. Para avaliar a fiabilidade das informações sugere-se a utilização de "bases de dados oficiais em linha e interfaces em linha de livre acesso, como registos comerciais nacionais e o Sistema de Intercâmbio de Informações sobre o IVA, ou solicitar aos comerciantes em causa que forneçam documentos comprovativos fiáveis, como cópias de documentos de identidade, extratos certificados de contas de pagamento, certificados de empresa e certidões de registo comercial", admitindo-se ainda o recurso "a outras fontes, disponíveis para utilização à distância, que proporcionem um grau de
+*7. Objeto da avaliação*. O fornecedor deve avaliar se as informações são fiáveis e completas. Verificar se as informações estão ou não completas não parece suscitar dificuldades de maior[cite:@wilman2024, art. 30.º, n.º 15]. Para avaliar a fiabilidade das informações sugere-se a utilização de "bases de dados oficiais em linha e interfaces em linha de livre acesso, como registos comerciais nacionais e o Sistema de Intercâmbio de Informações sobre o IVA, ou solicitar aos comerciantes em causa que forneçam documentos comprovativos fiáveis, como cópias de documentos de identidade, extratos certificados de contas de pagamento, certificados de empresa e certidões de registo comercial", admitindo-se ainda o recurso "a outras fontes, disponíveis para utilização à distância, que proporcionem um grau de
 fiabilidade semelhante para efeitos de cumprimento desta obrigação"[fn:28]. A verificação da fiabilidade da autocertificação parece problemática, uma vez que incide sobre comportamentos futuros[cite:@wilman2024, art. 30.º, n.º 16].
 
 O fornecedor não é obrigado a verificar a exatidão das informações recebidas. O responsável pela exatidão das informações é o comerciante (art. 30.º, n.º 2, 1.º parágrafo, /in fine/ do RSD). Se, no entanto, o fornecedor tiver conhecimento de que as informações são inexatas, não deve autorizar a utilização da plataforma antes da correção das mesmas pelo comerciante[cite:Cf., neste sentido, @hofmann2023, art. 30.º, n.º 29].
 
-*7. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:@wilman2024, art. 30.º, n.º 13;@hofmann2023, art. 30.º, n.º 25;@muller-terpitz2023, art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º, n.º 4, da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º, n.º 4, da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito nessa sede[fn:31]. Não se visa garantir um determinado resultado, o que compreende em face do art. 8.º do RSD e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às cirscunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços" se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no art. 2.º, n.º 2[cite:@hofmann2023, art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
+*8. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:@wilman2024, art. 30.º, n.º 13;@hofmann2023, art. 30.º, n.º 25;@muller-terpitz2023, art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º, n.º 4, da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º, n.º 4, da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito nessa sede[fn:31]. Não se visa garantir um determinado resultado, o que compreende em face do art. 8.º do RSD e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às cirscunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços" se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no art. 2.º, n.º 2[cite:@hofmann2023, art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
 
 *** VII - Informações inexatas, incompletas ou desatualizadas (n.º 3)
 
-*8. Regime*. Se o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes obtiver indicações suficientes ou motivos para supor que qualquer informação a que se refere o n.º 1 obtida do comerciante em causa é inexata, incompleta ou está desatualizada, o fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional.
+*9. Regime*. Se o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes obtiver indicações suficientes ou motivos para supor que qualquer informação a que se refere o n.º 1 obtida do comerciante em causa é inexata, incompleta ou está desatualizada, o fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional.
 
-*9. Tipologia de informações*. O n.º 3 refere informações inexatas, incompletas ou desatualizadas. São informações inexatas aquelas que não correspondem à realidade (/v.g./: o comerciante indica um número de telefone que não lhe pertence). São informações incompletas aquelas em que não consta a totalidade da informação necessária (/v.g./: o comerciante indica a a rua, cidade e país da sua sede, mas não indica o n.º da porta). Uma informação desatualizada é uma informação que era exata e completa quando foi prestada, mas com o decurso de tempo se tornou inexata (/v.g./: o comerciante indicou a morada da sede, mas, posteriormente, transferiu a sede para outro local). Na verdade, crê-se que as informações desatualizadas serão sempre informações inexatas e, por isso, duvida-se que as mesmas tenham autonomia face a estas últimas[cite:@muller-terpitz2023, art. 30.º, n.º 31].
+*10. Tipologia de informações*. O n.º 3 refere informações inexatas, incompletas ou desatualizadas. São informações inexatas aquelas que não correspondem à realidade (/v.g./: o comerciante indica um número de telefone que não lhe pertence). São informações incompletas aquelas em que não consta a totalidade da informação necessária (/v.g./: o comerciante indica a a rua, cidade e país da sua sede, mas não indica o n.º da porta). Uma informação desatualizada é uma informação que era exata e completa quando foi prestada, mas com o decurso de tempo se tornou inexata (/v.g./: o comerciante indicou a morada da sede, mas, posteriormente, transferiu a sede para outro local). Na verdade, crê-se que as informações desatualizadas serão sempre informações inexatas e, por isso, duvida-se que as mesmas tenham autonomia face a estas últimas[cite:@muller-terpitz2023, art. 30.º, n.º 31].
 
-*10. Indicações suficientes ou motivos para supor*. O dever do fornecedor de solicitar a correção ao comerciante surge quando obtiver indicações suficientes ou motivos para supor que as informações prestadas são inexatas, incompletas ou desatualizadas. O conceito de indicações suficientes não é definido no RSD. Pensa-se que será uma indicação suficiente, por exemplo, uma comunicação de um consumidor a informar, por exemplo, que o endereço de correio eletrónico disponibilizado pelo comerciante não permite o contacto. Quanto aos motivos para supor, considera-se que eles permitem ao fornecedor efetuar uma verificação oficiosa da correção, completude e atualidade das informações prestadas pelo comercianteo[cite:@hofmann2023, art. 30.º, n.ºs 36 e 37;@muller-terpitz2023, art. 30.º, n.º 28].
+*11. Indicações suficientes ou motivos para supor*. O dever do fornecedor de solicitar a correção ao comerciante surge quando obtiver indicações suficientes ou motivos para supor que as informações prestadas são inexatas, incompletas ou desatualizadas. O conceito de indicações suficientes não é definido no RSD. Pensa-se que será uma indicação suficiente, por exemplo, uma comunicação de um consumidor a informar, por exemplo, que o endereço de correio eletrónico disponibilizado pelo comerciante não permite o contacto. Quanto aos motivos para supor, considera-se que eles permitem ao fornecedor efetuar uma verificação oficiosa da correção, completude e atualidade das informações prestadas pelo comercianteo[cite:@hofmann2023, art. 30.º, n.ºs 36 e 37;@muller-terpitz2023, art. 30.º, n.º 28].
 
-*11. Correção das informações*. O fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional. Visa-se uma correção sem atrasos indevidos. Não parece possível fixar o prazo de forma rígida, uma vez que o mesmo deverá atender às circunstâncias do caso concreto, nomeadamente à dificuldade de efetuar a correção[cite:@hofmann2023, art. 30.º, n.º 42].
+*12. Correção das informações*. O fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional. Visa-se uma correção sem atrasos indevidos. Não parece possível fixar o prazo de forma rígida, uma vez que o mesmo deverá atender às circunstâncias do caso concreto, nomeadamente à dificuldade de efetuar a correção[cite:@hofmann2023, art. 30.º, n.º 42].
 
-*12. Consequência jurídica*. Efetuada a solicitação de correção das informações, o comerciante pode /(i)/ corrigir as informações dentro do prazo fixado, /(ii)/ corrigir as informações fora do prazo ou /(iii)/ pode não corrigir as informações. No primeiro caso, o fornecedor deve manter o serviço e pode, ao abrigo do n.º 3, examinar as informações corrigidas para apurar se há novas informações inexatas, incompletas ou desatualizadas. Nos segundo e terceiro casos, o fornecedor deve suspender rapidamente o serviço que presta ao comerciante, mas apenas quanto aos consumidores localizados na União Europeia (o que pode ser feito recorrendo ao mecanismo de bloqueio geográfico). A diferença entre o segundo e terceiro casos, encontra-se na possibilidade de o comerciante vir a efetuar, tardiamente, a correção das informações. Nesse caso é sustentado que o fornecedor deve examinar a informação antes de levantar a suspensão[cite:@hofmann2023, art. 30.º, n.º 44].
+*13. Consequência jurídica*. Efetuada a solicitação de correção das informações, o comerciante pode /(i)/ corrigir as informações dentro do prazo fixado, /(ii)/ corrigir as informações fora do prazo ou /(iii)/ pode não corrigir as informações. No primeiro caso, o fornecedor deve manter o serviço e pode, ao abrigo do n.º 3, examinar as informações corrigidas para apurar se há novas informações inexatas, incompletas ou desatualizadas. Nos segundo e terceiro casos, o fornecedor deve suspender rapidamente o serviço que presta ao comerciante, mas apenas quanto aos consumidores localizados na União Europeia (o que pode ser feito recorrendo ao mecanismo de bloqueio geográfico). A diferença entre o segundo e terceiro casos, encontra-se na possibilidade de o comerciante vir a efetuar, tardiamente, a correção das informações. Nesse caso é sustentado que o fornecedor deve examinar a informação antes de levantar a suspensão[cite:@hofmann2023, art. 30.º, n.º 44].
 
 *** VIII - Direito de apresentar uma reclamação (n.º 4)
 
@@ -169,11 +169,11 @@ O fornecedor de plataforma em linha que permite aos consumidores celebrar contra
 Esta obrigação de tratamento de dados visa "permitir que sejam apresentadas reclamações contra o comerciante ou que sejam cumpridas as decisões relacionadas com o comerciante" e é considerada pelo legislador europeu "necessária e proporcionada para que as informações possam ser acedidas, nos termos da legislação aplicável, nomeadamente em matéria de proteção de dados pessoais, por autoridades públicas e entidades privadas com um interesse legítimo, incluindo através das decisões de prestação de informações referidas no presente regulamento"[fn:33].
 
 *** X - Divulgação das informações (n.ºs 6 e 7)
-*13. Considerações gerais*. Os n.ºs 6 e 7 regulam a divulgação das informações obtidas ao abrigo dos n.ºs 1 e 2 pelo fornecedor. O n.º 6 regula a divulgação das informações a terceiros. O n.º 7 obriga o fornecedor a publicar, pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas, as informações obtidas ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/ (cf. /supra/ *IV.4.a), d)* e *e)*). Deste modo, e como regra geral, a informação obtida ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/, ficará disponível ao público em geral, pois as plataformas em linha que permitem a celebração de aos consumidores celebrar contratos à distância com consumidores não limitam a visualização de informações sobre produtos e serviços na sua plataforma em linha aos cibernautas que criaram uma conta na plataforma e acederam à mesma antes de navegarem pela plataforma. Deste modo, o n.º 6 releva, primordialmente, para conseguir o acesso às informações sobre os dados de identificação (n.º 1, alínea /b)/) e os dados da conta de pagamento (n.º 1, alínea /c)/) do comerciante.
+*14. Considerações gerais*. Os n.ºs 6 e 7 regulam a divulgação das informações obtidas ao abrigo dos n.ºs 1 e 2 pelo fornecedor. O n.º 6 regula a divulgação das informações a terceiros. O n.º 7 obriga o fornecedor a publicar, pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas, as informações obtidas ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/ (cf. /supra/ *IV.5.a), d)* e *e)*). Deste modo, e como regra geral, a informação obtida ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/, ficará disponível ao público em geral, pois as plataformas em linha que permitem a celebração de aos consumidores celebrar contratos à distância com consumidores não limitam a visualização de informações sobre produtos e serviços na sua plataforma em linha aos cibernautas que criaram uma conta na plataforma e acederam à mesma antes de navegarem pela plataforma. Deste modo, o n.º 6 releva, primordialmente, para conseguir o acesso às informações sobre os dados de identificação (n.º 1, alínea /b)/) e os dados da conta de pagamento (n.º 1, alínea /c)/) do comerciante.
 
-*14. Divulgação das informações a terceiros (n.º 6)*. O fornecedor só pode divulgar as informações obtidas ao abrigo do n.º 1 e 2 a terceiros quando tal lhe seja exigido nos termos do Direito aplicável. O n.º 6 enuncia, sem limitar, que o fornecedor deve divulgar as informações quando tal lhe seja exigido no contexto de uma decisão do artigo 10.º do RSD ou de quaisquer decisões emitidas pelas autoridades competentes dos Estados-Membros ou pela Comissão para o desempenho das suas funções nos termos do presente regulamento.
+*15. Divulgação das informações a terceiros (n.º 6)*. O fornecedor só pode divulgar as informações obtidas ao abrigo do n.º 1 e 2 a terceiros quando tal lhe seja exigido nos termos do Direito aplicável. O n.º 6 enuncia, sem limitar, que o fornecedor deve divulgar as informações quando tal lhe seja exigido no contexto de uma decisão do artigo 10.º do RSD ou de quaisquer decisões emitidas pelas autoridades competentes dos Estados-Membros ou pela Comissão para o desempenho das suas funções nos termos do presente regulamento.
 
-*15. Divulgação de informações na plataforma em linha (n.º 7)*. As informações relativas ao nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante (n.º 1, alínea /a)/), ao registo comercial ou outro registo público equivalente, se o comerciante estiver inscrito (n.º 1, alínea /b)/) e à autocertificação (n.º 1, alínea /e)/) devem ser disponibilizadas aos destinatários de forma clara, facilmente acessível e compreensível e pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas.
+*16. Divulgação de informações na plataforma em linha (n.º 7)*. As informações relativas ao nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante (n.º 1, alínea /a)/), ao registo comercial ou outro registo público equivalente, se o comerciante estiver inscrito (n.º 1, alínea /b)/) e à autocertificação (n.º 1, alínea /e)/) devem ser disponibilizadas aos destinatários de forma clara, facilmente acessível e compreensível e pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas.
 
 *a) Divulgação de forma clara, facilmente acessível e compreensível*. A divulgação das informações deve ser efetuada de forma clara, facilmente acessível e compreensível. A informação é divulgada de forma clara se for facilmente identificável, procurando evitar-se ambiguidades e dúvidas interpretativas[cite:@muller-terpitz2023, art. 30.º, n.º 43]. A informação é divulgada de forma facilmente acessível se o destinatário do serviço consegue aceder à informação sem necessitar de pesquisar muito por ela[cite:@hofmann2023, art. 30.º, n.º 51], não devendo a interface em linha constituir um entrave ao acesso à informação[cite:Cf., no contexto do artigo 14.º, @knapp2024, p. 113]. Por fim, a informação é divulgada de forma compreensível se for for fácil de compreender para o destinatário do serviço. Atendendo a que norma visa, em primeira linha, a proteção dos consumidores, o critério pode ser a facilidade de compreensão para o consumidor médio[cite:@muller-terpitz2023, art. 30.º, n.º 44].
 
@@ -232,7 +232,7 @@ O forneceder deve, por isso, planear e implementar o interface em linha da sua p
 
 *4. Informações mínimas (n.º 1.º, 2.º parágrafo e n.º 2)*. A interface da plataforma em linha deve permitir aos comerciantes fornecer um conjunto /mínimo/ de informações. Esse elenco parece estar contido no n.º 2, atendendo à sua redação ("a sua interface em linha é concebida e organizada de forma a permitir que os comerciantes forneçam, /pelo menos/, os seguintes elementos"). A verdade, porém, é que ao conjunto de informações elencadas no n.º 2 se deve aditar as informações sobre o operador ecónomico (n.º 1, 2.º parágrafo) e se deve tomar em consideração as concretizações efetuadas no artigo 22.º, n.º 9, do Regulamento relativo à segurança geral dos produtos. Assim, e no que respeita aos produtos, esta norma exige adicionalmente que a interface assegure que as informações são apresentadas ou facilmente acessíveis pelos consumidores na lista de produtos.
 
-*a) Informações sobre o operador económico (n.º 1, 2.º parágrafo)*. A interface deve permitir que o comerciante preste informações sobre o o nome, endereço postal, número de telefone e endereço de correio eletrónico do operador económico. O conceito de operador económico é definido como o fabricante, o mandatário, o importador, o distribuidor, o prestador de serviços de execução ou qualquer outra pessoa singular ou coletiva sujeita a obrigações no que respeita ao fabrico de produtos, disponibilizando-os no mercado ou colocando-os em serviço de acordo com a legislação de harmonização aplicável da União[fn:42]. A relevância desta informação poderá estar relacionada com as dificuldades sentidas pelas autoridades de fiscalização do mercado na identificação dos agentes económicos relevantes[cite:@hofmann2023, art. 30.º, n.º 18]. Releva-se, no que respeita aos produtos, o disposto no artigo 22.º, n.º 9, alíneas /a)/ e /b)/, do  Regulamento relativo à segurança geral dos produtos, o qual parece explicitar que o comerciante deve prestar esta informação sobre fabricante do produto, quando este se encontre localizado na União Europeia. Estranhamente, estas alíneas, ao contrário do n.º 1, 2.º parágrafo, do RSD não exigem a indicação de um número de telefone. Seria desejável que se tivesse garantido uma uniformização da informação a prestar pelo comerciante. Não se vislumbra nesta omissão uma vontade de suprimir a informação do número telefónico, pelo que se entende que esta informação deve manter-se como parte integrante do conjunto de informação mínima.
+*a) Informações sobre o operador económico*. A interface deve permitir que o comerciante preste informações sobre o o nome, endereço postal, número de telefone e endereço de correio eletrónico do operador económico. O conceito de operador económico é definido como o fabricante, o mandatário, o importador, o distribuidor, o prestador de serviços de execução ou qualquer outra pessoa singular ou coletiva sujeita a obrigações no que respeita ao fabrico de produtos, disponibilizando-os no mercado ou colocando-os em serviço de acordo com a legislação de harmonização aplicável da União[fn:42]. A relevância desta informação poderá estar relacionada com as dificuldades sentidas pelas autoridades de fiscalização do mercado na identificação dos agentes económicos relevantes[cite:@hofmann2023, art. 30.º, n.º 18]. Releva-se, no que respeita aos produtos, o disposto no artigo 22.º, n.º 9, alíneas /a)/ e /b)/, do  Regulamento relativo à segurança geral dos produtos, o qual parece explicitar que o comerciante deve prestar esta informação sobre fabricante do produto, quando este se encontre localizado na União Europeia. Estranhamente, estas alíneas, ao contrário do n.º 1, 2.º parágrafo, do RSD não exigem a indicação de um número de telefone. Seria desejável que se tivesse garantido uma uniformização da informação a prestar pelo comerciante. Não se vislumbra nesta omissão uma vontade de suprimir a informação do número telefónico, pelo que se entende que esta informação deve manter-se como parte integrante do conjunto de informação mínima.
 
 *b) Informações sobre a identificação do produto ou do serviço*. A interface da plataforma em linha deve permitir que os comerciantes prestem a informação necessária para identificação de cada um dos produtos ou serviços por si promovidos ou oferecidos aos consumidores localizados na União Europeia. No que respeita aos produtos, o artigo 22.º, n.º 9, alínea /c)/, do  Regulamento relativo à segurança geral dos produtos concretiza que as informações que permitem identificar um produto incluem uma imagem do mesmo, o seu tipo e qualquer outro identificador do produto.
 
